testsuite/tests/parser/should_fail/readFail003.stderr

readFail003.hs:4:27: error:
    • Couldn't match expected type ‘(a, [a1], [a2])’
                  with actual type ‘a’
    • In the expression: a
      In a pattern binding:
        ~(a, b, c)
          | nullity b = a
          | nullity c = a
          | otherwise = a
          where
              nullity = null
    • Relevant bindings include
        a :: a (bound at readFail003.hs:4:3)
        b :: [a1] (bound at readFail003.hs:4:5)
        c :: [a2] (bound at readFail003.hs:4:7)
